# EurovisionManager

./: .gitignore  CMakeLists.txt  euroMap.c  euroMap.h  eurovision.c  eurovision.h  eurovisionTests.c  eurovisionTests.h  judge.c  judge.h  main.c  main.py  makefile  map - Copy.c  map - Copy.h  map.c  map.h  state.c  state.h
mtm_map/: map.c  map.h
